--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   min-height: 100%;
 }
 
-.header {
+/* .header {
   background: #f0293e;
   color: #fff;
   text-align: center;
@@ -24,6 +24,23 @@ body {
   
 
   bottom: 0px;
+} */
+
+.header {
+  background: #4FC1E9;
+  font-family: 'Arial';
+  color: rgb(44, 42, 42);
+  text-align: center;
+  flex-grow: 0;
+  padding: 30px;
+  font-size: 10px;
+  border-radius: 5px;
+  transition: 1s;
+  font-weight: bold;
+  font-size: 70px;
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
 
 h1 {
@@ -35,10 +52,17 @@ h1 {
   min-height: 100vh;
 }
 
+/* .app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+} */
+
 .app {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #333e5a;
 }
 
 main {
@@ -55,6 +79,7 @@ h2 {
   font-weight: 300;
   margin-bottom: 1em;
   text-align: center;
+  color: rgb(255, 255, 255);
 }
 
 form > div {
@@ -98,6 +123,8 @@ button:hover {
 .room > h3 {
   text-align: center;
   font-weight: 300;
+  font-family: Arial;
+  font-size: 10px;
   margin-bottom: 1em;
 }
 
@@ -109,6 +136,7 @@ button:hover {
   padding: 0 2em 2em;
 }
 .participant_feed {
+  background-color: #333e5a;
   text-align: center;
   font-weight: 300;
   margin-bottom: 1em;
@@ -147,4 +175,52 @@ footer {
 
 footer a {
   color: #fff;
+}
+ 
+.submitForm {
+  margin-top: 80px;
+  padding: 20px;
+  width: 1000px;
+  background: #111;
+  border-radius: 10px;
+}
+
+.inputField {
+  background-color: #49536d;
+  
+}
+
+::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+.buttonHolder {
+  text-align: center;
+}
+
+.submitButton {
+  background-color: #6f18e0;
+  color: rgb(255, 255, 255);
+  font-family: Arial;
+  font-weight: bold;
+  padding: 10px;
+  align-content: center;
+}
+
+.checkbox {
+  top: -2px;
+  zoom: 1.5;
+}
+
+.checkbox > label {
+  position: relative;
+  top: -2px;
+  font-size: 11px;
+  font-family: Arial;
+  color:rgb(255, 255, 255);
+}
+
+.roleText {
+  color: rgb(255, 255, 255);
+  font-size: 18px;
 }
