--- a/src/Styling/Room.css
+++ b/src/Styling/Room.css
@@ -1,6 +1,8 @@
-.remote_participants {
+.remote-participants {
   text-align: center;
-  color: rgb(0, 0, 0);
+  background-color: #333e5a;
+  height: 100vh;
+  align-items: center;
 }
 
 .room {
