--- a/src/Styling/Room.css
+++ b/src/Styling/Room.css
@@ -15,3 +15,19 @@
 .screenshot {
     margin-top:100px;
 }
+
+.logoutButton {
+  background-color: #6f18e0;
+  color: rgb(255, 255, 255);
+  font-family: Arial;
+  font-weight: bold;
+  padding: 10px;
+  position: absolute;
+  top: 26px;
+  right: 50px;
+}
+/* .room button {
+  position: absolute;
+  top: 0;
+  right: 20px;
+} */
