--- a/src/Styling/Room.css
+++ b/src/Styling/Room.css
@@ -17,8 +17,8 @@
 }
 
 .logoutButton {
-  background-color: #6f18e0;
-  color: rgb(255, 255, 255);
+  background-color: #c3073f;
+  color: rgb(0,0,0);
   font-family: Arial;
   font-weight: bold;
   padding: 10px;
