--- a/src/App.css
+++ b/src/App.css
@@ -27,20 +27,18 @@ body {
 } */
 
 .header {
-  background: #4FC1E9;
+  background: #c72566;
   font-family: 'Arial';
-  color: rgb(44, 42, 42);
+  color: rgb(0, 0, 0);
   text-align: center;
   flex-grow: 0;
   padding: 30px;
-  font-size: 10px;
   border-radius: 5px;
   transition: 1s;
   font-weight: bold;
   font-size: 70px;
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+  font-style: italic;
+  letter-spacing: 2px;
 }
 
 h1 {
@@ -196,8 +194,8 @@ footer a {
 }
 
 .submitButton {
-  background-color: #6f18e0;
-  color: rgb(255, 255, 255);
+  background-color: #c3073f;
+  color: rgb(0,0,0);
   font-family: Arial;
   font-weight: bold;
   padding: 10px;
